# atmospherics-tools

./: .gitignore  README.md
FluxComparison/: CMakeLists.txt  Config.yaml  Config_SolMax.yaml  Config_SolMin.yaml
FluxComparison/app/: CMakeLists.txt  FluxComp.cxx
FluxComparison/inputs/BARTOL/: fmax20_0311z.sou_nbe  fmax20_0311z.sou_nbm  fmax20_0311z.sou_nue  fmax20_0311z.sou_num
FluxComparison/src/: BartolFluxReader.cxx  BartolFluxReader.h  CMakeLists.txt  FluxReader.cxx  FluxReader.h  HondaFluxReader.cxx  HondaFluxReader.h
anatree/: anatree_class.py  requirements.txt
detsys/: CMakeLists.txt  Config.yaml  RunScript.sh  setup.sh  weighted_caf.root
detsys/app/: CMakeLists.txt  ComparisonScript.cxx
detsys/src/: AnalysisBinningManager.cxx  AnalysisBinningManager.h  CMakeLists.txt  Calculator.cxx  Constants.h  Data.h  FluxManager.cxx  ObservableManager.cxx  ObservableManager.h  Reader.cxx  Reader.h  SRWriter.cxx  SampleManager.cxx  SampleManager.h
example-notebooks/: README.md  event-rates.ipynb  performance_comparison_with_beam.ipynb  production-HL-checks.ipynb  very_basic_anatree_example.ipynb
fast-osc-feedback/: CMakeLists.txt  README.md  fast-feedback.ipynb  fastfeedback.py
fast-osc-feedback/src/: CMakeLists.txt  LinkDef.h  Oscillogram.cxx  Oscillogram.h
spline_calculation/: CMakeLists.txt  README.md
spline_calculation/app/: CMakeLists.txt  SplineCalcExample.cc
spline_calculation/app/utils/: plot.py
spline_calculation/configs/: demo.yaml
spline_calculation/src/: CMakeLists.txt  MultiHistoNDAction.hxx  SplineCalculator.cxx  SplineCalculator.h  SplineContainer.cxx  SplineContainer.h
weight_calculation/: setup.sh
weight_calculation/app/: CMakeLists.txt  michele_splitting.cxx  split_channels.cxx  weightor.cxx
weight_calculation/src/: CMakeLists.txt  Calculator.cxx  Data.h  DirWriter.cxx  FluxManager.h  Reader.cxx  Reader.h  SRWriter.cxx  SRWriter.h  Writer.cxx
xsec_systs_calculation/: CMakeLists.txt  README.md  extract_genie.cc  setup.sh
xsec_systs_calculation/app/: CMakeLists.txt  PrintWeights.cxx  ReadCAF.cxx  UpdateReweight.cxx
xsec_systs_calculation/fcl/: Emiss.fcl  example_systs.fcl  systs_atmospherics_v1.fcl
xsec_systs_calculation/tools/: README.md  extract_genie.cc  fhicl_parser.py  read_systs.ipynb  systs.py  systs_atmospherics_v1.fcl
